--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-icarus": "^6.0.0",
-    "hexo-theme-landscape": "^1.0.0"
+    "hexo-theme-landscape": "^1.0.0",
+    "semver": "^7.5.4"
   }
 }
