--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -160,9 +160,8 @@ article:
 # Search plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Search/
 search:
-    type: google_cse
+    type: algolia
     # Whether to include pages in the search results
-    cx: b6917858b0a2b481c
 # Comment plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Comment/
 comment:
