--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -106,11 +106,11 @@ head:
 navbar:
     # Navigation menu items
     menu:
-        Home: /
-        Archives: /archives
-        Categories: /categories
-        Tags: /tags
-        About: /about
+        首页: /
+        归档: /archives
+        分类: /categories
+        标签: /tags
+        有关: /about
     # Links to be shown on the right of the navigation bar
     links:
         Download on GitHub:
@@ -169,43 +169,11 @@ comment:
     shortname: bo-ke-acid
 # Donate plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Donation/
-donates:
-    # "Afdian.net" donate button configurations
-    -
-        type: afdian
-        # URL to the "Afdian.net" personal page
-        url: ''
-    # Alipay donate button configurations
-    -
-        type: alipay
-        # Alipay qrcode image URL
-        qrcode: ''
-    # "Buy me a coffee" donate button configurations
-    -
-        type: buymeacoffee
-        # URL to the "Buy me a coffee" page
-        url: ''
-    # Patreon donate button configurations
-    -
-        type: patreon
-        # URL to the Patreon page
-        url: ''
-    # Paypal donate button configurations
-    -
-        type: paypal
-        # Paypal business ID or email address
-        business: ''
-        # Currency code
-        currency_code: USD
-    # Wechat donate button configurations
-    -
-        type: wechat
-        # Wechat qrcode image URL
-        qrcode: ''
+#donate:
 # Share plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Share/
-share:
-    type: addtoany
+#share:
+    #type: addtoany
 # Sidebar configurations.
 # Please be noted that a sidebar is only visible when it has at least one widget
 sidebar:
@@ -230,15 +198,11 @@ widgets:
         # Author title
         author_title: developer
         # Author's current location
-        location: China
+        location: 
         # URL or path to the avatar image
         avatar: img/avatar.jpg
         # Whether show the rounded avatar image
         avatar_rounded: true
-        # Email address for the Gravatar
-        gravatar: 
-        # URL or path for the follow button
-        follow_link: https://github.com/PaRr0tBoY
         # Links to be shown on the bottom of the profile widget
         social_links:
             Github:
@@ -284,12 +248,12 @@ widgets:
     # Recent posts widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: recent_posts
     # Archives widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: right
+        position: left
         type: archives
     # Tags widget configurations
     -
