--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -8,7 +8,7 @@ logo:
 # Page metadata configurations
 head:
     # URL or path to the website's icon
-    favicon: https://img2.imgtp.com/2024/06/01/wxmXBRwt.png
+    favicon: https://img.picui.cn/free/2024/06/01/665b1a860c5a9.png
     # Web application manifests configuration
     # https://developer.mozilla.org/en-US/docs/Web/Manifest
     manifest:
