--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -119,7 +119,7 @@ navbar:
 # Page footer configurations
 footer:
     # Copyright text
-    copyright: © 2024 Site Own by Acid
+    copyright: © 2024 Site Owned by Acid
     # Links to be shown on the right of the footer section
     links:
         Creative Commons:
