navBarUpdate,new pages

--- a/_config.post.yml
+++ b/_config.post.yml
@@ -106,11 +106,12 @@ head:
 navbar:
     # Navigation menu items
     menu:
-        Home: /
-        Archives: /archives
-        Categories: /categories
-        Tags: /tags
-        About: /about
+        首页: /
+        归档: /archives
+        分类: /categories
+        有关: /about
+        番剧清单: /myanimelist
+        更新日志: /changelog
     # Links to be shown on the right of the navigation bar
     links:
         Download on GitHub:
