--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -107,11 +107,11 @@ navbar:
     # Navigation menu items
     menu:
         首页: /
-        番剧列表: /myanimelist
         归档: /archives
         分类: /categories
         有关: /about
-        日志: /changelog
+        番剧清单: /myanimelist
+        更新日志: /changelog
     # Links to be shown on the right of the navigation bar
     links:
         Download on GitHub:
