--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -251,7 +251,7 @@ widgets:
     # Archives widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: right
+        position: left
         type: archives
     # Tags widget configurations
     -
