--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -13,10 +13,10 @@ head:
     # https://developer.mozilla.org/en-US/docs/Web/Manifest
     manifest:
         # Name of the web application (default to the site title)
-        name: AC|博客|ID
+        name: 博客 | ACID
         # The displayed name of the web application
         # when there is not enough space to display full name
-        short_name: ACID
+        short_name: acidsblog
         # The start URL of the web application
         start_url: https://www.ac1d.cc
         # The default theme color for the application
