更新 _config.icarus.yml

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -106,9 +106,9 @@ head:
 navbar:
     # Navigation menu items
     menu:
+        主页: /
         番剧清单: /myanimelist
-        更新日志: /changelog
-        有关: /about
+        变更日志: /changelog
     # Links to be shown on the right of the navigation bar
     links:
         Download on GitHub:
