--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -110,10 +110,10 @@ navbar:
         番剧清单: /myanimelist
         变更日志: /changelog
     # Links to be shown on the right of the navigation bar
-    links:
-        Download on GitHub:
-            icon: fab fa-github
-            url: https://github.com/PaRr0tBoY   
+#    links:
+#        Download on GitHub:
+#            icon: fab fa-github
+#            url: https://github.com/PaRr0tBoY   
 # Page footer configurations
 footer:
     # Copyright text
