--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,9 @@ timezone: Asia/Shanghai
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: https://www.ac1d.cc
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:day/:urlname/
 permalink_defaults:
+  urlname: index
 pretty_urls:
   trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: false # Set to false to remove trailing '.html' from permalinks
