--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,8 @@ deploy:
   repo: https://github.com/PaRr0tBoY/parr0tboy.github.io.git
   branch: main
   message: newPost:{{ now('HH:mm:ss') }})
-algolia:
-    applicationID: P5IBAHA926
-    indexName: Acid-Site
-    apiKey: 17258334a08573e6aff14e9329da9f91
+
+  lazyload:
+  enable: true  # 是否开启图片懒加载
+  onlypost: false  # 是否只对文章的图片做懒加载
+  loadingImg: # eg ./images/loading.gif
