--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
+    "hexo-lazyload-image": "^1.1.2",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-inferno": "^1.0.2",
     "hexo-renderer-marked": "^6.0.0",
