--- a/_config.post.yml
+++ b/_config.post.yml
@@ -13,10 +13,10 @@ head:
     # https://developer.mozilla.org/en-US/docs/Web/Manifest
     manifest:
         # Name of the web application (default to the site title)
-        name: AC|博客|ID
+        name: 博客 | ACID
         # The displayed name of the web application
         # when there is not enough space to display full name
-        short_name: ACID
+        short_name: acidsblog
         # The start URL of the web application
         start_url: https://ac1d.space
         # The default theme color for the application
@@ -164,10 +164,11 @@ search:
 # Comment plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Comment/
 comment:
+    enable: true
     type: utterances
     repo: PaRr0tBoY/parr0tboy.github.io #Your-GitHub-Username/Your-Public-Repo-Name
-    issue_term: pathname       # 必填项，与issue_number二选一填写
-    label: comments     # 可选填
+    issue_term: title
+    label: 💬comments   # 可选填
     theme: dark-blue
 # Donate plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Donation/
@@ -256,7 +257,7 @@ plugins:
     # https://www.osano.com/cookieconsent/
     cookie_consent:
         # The compliance type. Can be "info", "opt-in", or "opt-out"
-        type: opt-in
+        type: info
         # Theme of the popup. Can be "block", "edgeless", or "classic"
         theme: block
         # Whether the popup should stay static regardless of the page scrolls
